package com.ecommerce.pedido.models.enums;

public enum OrigemPedido {
    DELIVERY,
    PRESENCIAL
}
